personalised the boilerplate and removed excesses

--- a/css resets/joshwcomeau__reset.css
+++ b/css resets/joshwcomeau__reset.css
@@ -3,6 +3,10 @@
   https://www.joshwcomeau.com/css/custom-css-reset/
 */
 
+/* Put this in HTML 
+find the github link or use link from femijosepho github
+*/
+
 /*
   1. Use a more-intuitive box-sizing model.
 */
