--- a/css resets/andy-bell-reset.css
+++ b/css resets/andy-bell-reset.css
@@ -1,5 +1,10 @@
 /* https://piccalil.li/blog/a-modern-css-reset */
 
+/* Put this in HTML 
+<link rel="stylesheet" href="https://gist.github.com/Asjas/4b0736108d56197fce0ec9068145b421#file-reset-css"> 
+*/
+
+
 /* Box sizing rules */
 *,
 *::before,
