--- a/css resets/remedy.css
+++ b/css resets/remedy.css
@@ -1,3 +1,8 @@
+/* put this in your html link:
+<link rel="stylesheet" href="https://github.com/jensimmons/cssremedy/blob/master/css/remedy.css"> 
+*/
+
+
 /* @docs
 label: Core Remedies
 version: 0.1.0-beta.2
@@ -20,7 +25,7 @@ category: global
 *,
 ::before,
 ::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* @docs
@@ -36,7 +41,7 @@ links:
 category: global
 */
 html {
-	line-sizing: normal;
+  line-sizing: normal;
 }
 
 /* @docs
@@ -48,7 +53,7 @@ note: |
 category: global
 */
 body {
-	margin: 0;
+  margin: 0;
 }
 
 /* @docs
@@ -60,7 +65,7 @@ note: |
   category: global
 */
 [hidden] {
-	display: none;
+  display: none;
 }
 
 /* @docs
@@ -72,22 +77,27 @@ note: |
 category: typography
 */
 h1 {
-	font-size: 2rem;
+  font-size: 2rem;
 }
+
 h2 {
-	font-size: 1.5rem;
+  font-size: 1.5rem;
 }
+
 h3 {
-	font-size: 1.17rem;
+  font-size: 1.17rem;
 }
+
 h4 {
-	font-size: 1rem;
+  font-size: 1rem;
 }
+
 h5 {
-	font-size: 0.83rem;
+  font-size: 0.83rem;
 }
+
 h6 {
-	font-size: 0.67rem;
+  font-size: 0.67rem;
 }
 
 /* @docs
@@ -99,7 +109,7 @@ note: |
 category: typography
 */
 h1 {
-	margin: 0.67em 0;
+  margin: 0.67em 0;
 }
 
 /* @docs
@@ -111,7 +121,7 @@ note: |
 category: typography
 */
 pre {
-	white-space: pre-wrap;
+  white-space: pre-wrap;
 }
 
 /* @docs
@@ -125,11 +135,11 @@ note: |
 category: typography
 */
 hr {
-	border-style: solid;
-	border-width: 1px 0 0;
-	color: inherit;
-	height: 0;
-	overflow: visible;
+  border-style: solid;
+  border-width: 1px 0 0;
+  color: inherit;
+  height: 0;
+  overflow: visible;
 }
 
 /* @docs
@@ -151,12 +161,13 @@ audio,
 iframe,
 embed,
 object {
-	display: block;
-	vertical-align: middle;
-	max-width: 100%;
+  display: block;
+  vertical-align: middle;
+  max-width: 100%;
 }
+
 audio:not([controls]) {
-	display: none;
+  display: none;
 }
 
 /* @docs
@@ -173,10 +184,11 @@ note: |
 category: embedded elements
 */
 picture {
-	display: contents;
+  display: contents;
 }
+
 source {
-	display: none;
+  display: none;
 }
 
 /* @docs
@@ -194,7 +206,7 @@ img,
 svg,
 video,
 canvas {
-	height: auto;
+  height: auto;
 }
 
 /* @docs
@@ -207,7 +219,7 @@ note: |
 category: embedded elements
 */
 audio {
-	width: 100%;
+  width: 100%;
 }
 
 /* @docs
@@ -219,7 +231,7 @@ note: |
 category: legacy browsers
 */
 img {
-	border-style: none;
+  border-style: none;
 }
 
 /* @docs
@@ -231,7 +243,7 @@ note: |
 category: legacy browsers
 */
 svg {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 /* @docs
@@ -257,7 +269,7 @@ hgroup,
 main,
 nav,
 section {
-	display: block;
+  display: block;
 }
 
 /* @docs
@@ -271,6 +283,6 @@ category: legacy browsers
 */
 [type="checkbox"],
 [type="radio"] {
-	box-sizing: border-box;
-	padding: 0;
+  box-sizing: border-box;
+  padding: 0;
 }
