--- a/css resets/thenewcssreset.css
+++ b/css resets/thenewcssreset.css
@@ -1,3 +1,7 @@
+/* put this in your html link:
+<!-- <link rel="stylesheet" href="https://github.com/elad2412/the-new-css-reset/blob/main/css/reset.css"> -->
+*/
+
 /***
     The new CSS reset - version 1.11 (last updated 20.9.2023)
     GitHub page: https://github.com/elad2412/the-new-css-reset
@@ -8,9 +12,7 @@
     - The "symbol *" part is to solve Firefox SVG sprite bug
     - The "html" element is excluded, otherwise a bug in Chrome breaks the CSS hyphens property (https://github.com/elad2412/the-new-css-reset/issues/36)
  */
-*:where(
-		:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)
-	) {
+*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
 	all: unset;
 	display: revert;
 }
