testing after os change

--- a/3-colors.css
+++ b/3-colors.css
@@ -10,7 +10,7 @@
 	--clr-secondary-650: hsl(39, 89%, 45%, 1);
 	--clr-tertiary-100: hsla(0, 0%, 0%, 1);
 	--clr-tertiary-200: hsl(214, 92%, 33%, 1);
-
+	--clr-tertiary-200: hsl(214, 92%, 33%);
 
 	--clr-grays-600: hsl(0, 0%, 6%);
 	--clr-grays-650: hsla(0, 0%, 69%, 1);
